--- a/android/android.main/src/main/res/layout/activity_main.xml
+++ b/android/android.main/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:visibility="gone">
 
         <ImageView
+            android:id="@+id/img_add_contact"
             android:layout_width="128dp"
             android:layout_height="128dp"
             android:layout_alignParentTop="true"
@@ -25,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/add_contact_tutorial"
+            android:layout_below="@id/img_add_contact"
             android:alpha="0.5"
             android:gravity="center"
             android:paddingLeft="40dp"
