main: conversation summaries "that are longer than the view is wide to be ellipsized instead of broken in the middle" <- description from the docs :smiley:

--- a/android/android.main/src/main/res/layout/list_item_main.xml
+++ b/android/android.main/src/main/res/layout/list_item_main.xml
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/conversationParty"
         android:layout_toRightOf="@+id/conversationPicture"
+        android:ellipsize="end"
         android:lines="1"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
