Main: ConversationListActivity Material Design started

--- a/android/android.main/src/main/res/values/styles.xml
+++ b/android/android.main/src/main/res/values/styles.xml
@@ -17,4 +17,10 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <!-- NEW Application theme. Material Design -->
+    <style name="AppThemeMaterial" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+
+
 </resources>
