--- a/android/android.main/src/main/res/drawable/contact_speech_bubble_old.xml
+++ b/android/android.main/src/main/res/drawable/contact_speech_bubble_old.xml
@@ -3,12 +3,12 @@
     
     <item android:id="@+id/bubbleShadow">
 	    <shape android:shape="rectangle">
-            <solid android:color="@color/ColorAccent" />
+	        <solid android:color="#CECECE" />
 	    </shape>
     </item>
  	<item android:bottom="2dp" android:id="@+id/bubbleBackground">
 	    <shape android:shape="rectangle" >
-            <solid android:color="@color/ColorAccent" />
+	        <solid android:color="#DDDDDD" />
 	    </shape>
 	</item>
 	
