--- a/android/android.main/src/main/res/drawable/user_speech_bubble_old.xml
+++ b/android/android.main/src/main/res/drawable/user_speech_bubble_old.xml
@@ -3,12 +3,12 @@
     
     <item>
 	    <shape android:shape="rectangle" >
-	        <solid android:color="@color/ColorPrimary" />
+	        <solid android:color="#D34F39" />
 	    </shape>
     </item>
  	<item android:bottom="2dp">
 	    <shape android:shape="rectangle" >
-	        <solid android:color="@color/ColorPrimaryLight" />
+	        <solid android:color="#F6D7D6" />
 	    </shape>
 	</item>
 	
