--- a/android/android.main/src/main/res/layout/list_item_party_message_old.xml
+++ b/android/android.main/src/main/res/layout/list_item_party_message_old.xml
@@ -1,29 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
+                android:gravity="left"
                 android:padding="10dp">
 
     <View
-        android:id="@+id/speechBubbleArrowRight"
+        android:id="@+id/speechBubbleArrowLeft"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_alignBottom="@+id/speechBubble"
-        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/speechBubble"
         android:background="@drawable/drawble_dummy"/>
 
     <RelativeLayout
         android:id="@+id/speechBubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/speechBubbleArrowRight"
-        android:background="@drawable/user_speech_bubble"
+        android:layout_toRightOf="@+id/speechBubbleArrowLeft"
+        android:background="@drawable/contact_speech_bubble_old"
         android:padding="10dp">
 
         <ImageView
             android:id="@+id/img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/messageContent"
             android:visibility="gone">
         </ImageView>
 
@@ -31,22 +31,19 @@
             android:id="@+id/messageContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/img"
             android:minWidth="40dp"
-            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:textIsSelectable="true"
-            android:textColor="#fff"
             android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/messageTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/messageContent"
             android:layout_alignParentBottom="true"
-            android:layout_alignRight="@+id/messageContent"
             android:layout_below="@+id/messageContent"
-            android:paddingLeft="5dp"
-            android:textColor="#fff"
+            android:textColor="#777"
             android:textSize="12sp"/>
     </RelativeLayout>
 
