location: add sneer-api

--- a/android/apps/location/src/main/res/layout/activity_follow_me.xml
+++ b/android/apps/location/src/main/res/layout/activity_follow_me.xml
@@ -9,8 +9,9 @@
         android:id="@+id/map_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:scaleType="fitXY"
+        android:layout_centerInParent="true"
         android:adjustViewBounds="true"
-        android:layout_centerInParent="true"/>
+        android:background="#eee"
+        android:scaleType="fitXY"/>
 
 </RelativeLayout>
