--- a/android/android.main/src/main/res/drawable/user_speech_bubble.xml
+++ b/android/android.main/src/main/res/drawable/user_speech_bubble.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <item>
+    <item android:id="@+id/bubbleShadow">
 	    <shape android:shape="rectangle" >
 	        <solid android:color="@color/ColorPrimary" />
 	    </shape>
     </item>
- 	<item android:bottom="2dp">
+ 	<item android:bottom="2dp" android:id="@+id/bubbleBackground">
 	    <shape android:shape="rectangle" >
 	        <solid android:color="@color/ColorPrimaryLight" />
 	    </shape>
