--- a/android/android.main/src/main/res/menu/main.xml
+++ b/android/android.main/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/action_search_for_apps"
         android:orderInCategory="102"
-        android:visible="true"
+        android:visible="false"
         android:title="@string/action_search_for_apps"/>
     <item
         android:id="@+id/action_advanced"
