--- a/android/android.main/src/main/res/layout/list_item_party_message.xml
+++ b/android/android.main/src/main/res/layout/list_item_party_message.xml
@@ -11,7 +11,8 @@
         android:layout_alignTop="@+id/speechBubble"
         android:background="@drawable/drawble_dummy"/>
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:id="@+id/speechBubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,21 +23,25 @@
         <TextView
             android:id="@+id/messageContent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="40dp"
-            android:paddingRight="5dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:text="message content"
             android:textIsSelectable="true"
+            android:textColor="#fff"
             android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/messageTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/messageContent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/messageContent"
+            android:gravity="end"
+            android:layout_gravity="bottom|end"
+            android:paddingLeft="5dp"
+            android:text="message time"
+            android:textColor="#eee"
             android:textSize="12sp"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
