--- a/android/android.main/src/main/res/menu/convos_menu_list.xml
+++ b/android/android.main/src/main/res/menu/convos_menu_list.xml
@@ -7,7 +7,7 @@
         android:title="Edit contact"/>
     <item
         android:id="@+id/delete_contact"
-        android:visible="false"
+        android:visible="true"
         android:orderInCategory="103"
         android:title="Delete contact"/>
 
